fixed contrast errors and missing fieldsets

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ main {
 
 footer {
   padding: 1% 0;
-  color: white;
+  color: black;
   background-color: red;
 }
 
