--- a/src/WatchList/WatchList.css
+++ b/src/WatchList/WatchList.css
@@ -40,7 +40,7 @@ h2 {
 
 .home {
   background-color: red;
-  color: white;
+  color: black;
 }
 
 section {
